Name:                heapscope-cairo

Version:             0.1.0.0

Synopsis:            Scope My Heap! (Cairo)

Description:
    heapscope-cairo is a GTK/Cairo tool for viewing heap profiles.
    .
    To run it, simply:
    .
    @
        $ cabal install gtk2hs-buildtools heapscope-cairo
        $ heapscope-cairo
    @

License:             BSD3
License-file:        LICENSE
Author:              Conrad Parker
Maintainer:          conrad@metadecks.org
Category:            Development

Cabal-Version:       >=1.8
Build-type:          Simple
Data-Files:
  data/actions.ui

flag splitBase
  description: Use the split-up base package.

Executable heapscope
  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  Main-is:           GUI.hs
  Hs-Source-Dirs:    ., src

  Build-Depends:       
    cairo,
    gtk,
    mtl                       >= 2.0.0.0 && < 3,
    scope                     >= 0.8.0.0 && < 0.9,
    scope-cairo,
    heapscope

------------------------------------------------------------------------
-- Git repo
--
source-repository head
  type: git
  location: git://github.com/kfish/heapscope-cairo.git
